--- a/css/custom.css
+++ b/css/custom.css
@@ -136,7 +136,7 @@ h4 {
 }
 
 .exhibit-div {
-  background-image: url("../img/sarah/IMG_0652.jpg");
+  background-image: url("../img/sarah/IMG_0652.JPG");
   background-size: cover;
   height: 500px;
 }
